// Original file: proto/user.proto


export interface UserAuthen {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'role'?: (string);
  'email'?: (string);
}

export interface UserAuthen__Output {
  'id'?: (string);
  'firstName'?: (string);
  'lastName'?: (string);
  'role'?: (string);
  'email'?: (string);
}
